--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coba bekerja dengan git</title>
+    <title>coba Git Remote</title>
 </head>
 
 <body>
-
+    <p>menambahkan paragraf</p>
 </body>
 
 </html>
